Encoding an image is confusing

--- a/aiart/art_01_Intro_GradientDescent.ipynb
+++ b/aiart/art_01_Intro_GradientDescent.ipynb
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=500x500>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2389,6 +2389,213 @@
     "\n",
     "We're going to load in a CLIP model and use it to encode both an image and some text:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████| 338M/338M [03:07<00:00, 1.89MiB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "perceptor.visual.input_resolution = 224\n"
+     ]
+    }
+   ],
+   "source": [
+    "from CLIP import clip\n",
+    "# useful image transforms\n",
+    "from torchvision import transforms\n",
+    "# progress bars library\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "# load in one of the models from CLIP\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "''' \n",
+    "This line of code is used to load a pre-trained CLIP model and prepare it for \n",
+    "inference. CLIP is a powerful deep learning model developed by OpenAI for \n",
+    "zero-shot image and text classification. The model used in this case is \n",
+    "'ViT-B/32', which is a Vision Transformer model with a base configuration.\n",
+    "\n",
+    "Let's break down the code step by step:\n",
+    "1. `clip.load('ViT-B/32', jit=False)`: This function loads the pre-trained CLIP \n",
+    "model 'ViT-B/32' with Just-In-Time (JIT) compilation disabled (`jit=False`). \n",
+    "Disabling JIT compilation makes the model more flexible, but it may be slower \n",
+    "during inference. The function returns a tuple containing the model and the \n",
+    "pre-processing function.\n",
+    "2. `[0]`: This extracts the model from the tuple returned by the `clip.load()` \n",
+    "function.\n",
+    "3. `.eval()`: This sets the model to evaluation mode, which is necessary for \n",
+    "running inference. In evaluation mode, certain layers like Dropout and BatchNorm \n",
+    "behave differently than during training.\n",
+    "4. `.requires_grad_(False)`: This disables gradient computation for the model's \n",
+    "parameters. This is useful when you only want to use the model for inference and \n",
+    "not for training, as it saves memory and improves performance.\n",
+    "5. `.to(device)`: This moves the model to the specified device (e.g., CPU or GPU). \n",
+    "The `device` variable should be defined earlier in your code, typically with a \n",
+    "line like `device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')`.\n",
+    "\n",
+    "After executing this line of code, the variable `perceptor` will hold the CLIP \n",
+    "model that is ready for inference on the specified device, with gradient \n",
+    "computation disabled.\n",
+    "\n",
+    "You can now use the `perceptor` model to perform zero-shot classification tasks \n",
+    "by encoding both images and text and computing the similarity between the \n",
+    "encodings.\n",
+    "'''\n",
+    "perceptor = clip.load('ViT-B/32', jit=False)[0].eval().requires_grad_(False).to(device)\n",
+    "print(f'perceptor.visual.input_resolution = {perceptor.visual.input_resolution}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encoding Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 512])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Embed some text\n",
+    "token_string = 'A watercolor painting of the sunset over a mountain range'\n",
+    "text_embed = perceptor.encode_text(clip.tokenize(token_string)).to(device)\n",
+    "text_embed.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encoding an image:\n",
+    "\n",
+    "The input image tensor has a shape of `torch.Size([1, 3, 224, 224])`, which  \n",
+    "represents a batch of 1 image (B) with 3 color channels (C) and dimensions of  \n",
+    "224x224 pixels (HxW). \n",
+    "\n",
+    "When the image is passed through the CLIP model's `encode_image()` method, it  \n",
+    "gets transformed into an embedding with a shape of `torch.Size([1, 512])`. \n",
+    "\n",
+    "This transformation happens through several layers of the CLIP model's architecture.\n",
+    "\n",
+    "Here's a high-level overview of how the transformation occurs in the CLIP model  \n",
+    "(using the 'ViT-B/32' variant):\n",
+    "\n",
+    "1. **Input Image**: The input image tensor has a shape of `[1, 3, 224, 224]`,  \n",
+    "representing a batch of 1 image with 3 color channels and dimensions of 224x224 pixels.\n",
+    "\n",
+    "2. **Normalization**: The `normalize` function is applied to the image, which  \n",
+    "normalizes each color channel using the provided mean and standard deviation values.\n",
+    "\n",
+    "3. **Vision Transformer**: The normalized image is passed through the  \n",
+    "Vision Transformer (ViT) architecture. ViT divides the image into non-overlapping  \n",
+    "patches, flattens them, and feeds them into the transformer layers. In the case  \n",
+    "of 'ViT-B/32', the image is divided into 32x32 pixel patches.  \n",
+    "The transformer layers process these patches and create feature representations  \n",
+    "for each patch.  \n",
+    "The final output of the ViT layers is a sequence of feature vectors, including a  \n",
+    "special \"classification token\" that has a global understanding of the image content.\n",
+    "\n",
+    "4. **Pooling**: The classification token is extracted from the output of the ViT layers.  \n",
+    "This token is a vector representation that captures the global features of the image.  \n",
+    "Its shape is `[1, 768]`.\n",
+    "\n",
+    "5. **Projection Head**: The classification token is passed through a linear  \n",
+    "projection layer, which reduces its dimensionality to 512.  \n",
+    "This final embedding has a shape of `[1, 512]`.\n",
+    "\n",
+    "The result is an image embedding with a shape of `torch.Size([1, 512])`.  \n",
+    "This embedding can be compared to text embeddings produced by the CLIP model to  \n",
+    "perform zero-shot classification tasks.\n",
+    "\n",
+    "Regarding the question of whether this works with different image sizes:  \n",
+    "The 'ViT-B/32' model expects input images of size 224x224 pixels.  \n",
+    "If you provide images with different dimensions, the model may not work as expected,  \n",
+    "and the performance could be affected. You can resize the input images to  \n",
+    "224x224 pixels using the `torchvision.transforms.Resize` function before passing  \n",
+    "them through the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- [img.shape] -- \n",
+      "torch.Size([1, 3, 224, 224])\n",
+      "-- [image_embed.shape] --\n",
+      "torch.Size([1, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a random image\n",
+    "# 1 image, 3 channels, 224x224 pixels\n",
+    "# does this work with different sizes?\n",
+    "img = torch.rand(1, 3, 224, 224)\n",
+    "print(f'-- [img.shape] -- \\n{img.shape}')\n",
+    "# img_pil = transforms.ToPILImage(img.squeeze(0))\n",
+    "\n",
+    "# Create a transform - map image data to same range as seen by CLIP during training\n",
+    "# @audit 🛑 : Explain these mean and std magic numbers\n",
+    "# ANSWER :\n",
+    "# These specific values were computed from the dataset used to train the model \n",
+    "# and represent the average pixel value for each channel\n",
+    "# I STILL DON'T UNDERSTAND THIS LOL\n",
+    "mean = [0.48145466, 0.4578275, 0.40821073] # used to center the data for each channel\n",
+    "std = [0.26862954, 0.26130258, 0.27577711] # used to scale the data for each channel\n",
+    "normalize = transforms.Normalize(mean=mean, std=std)\n",
+    "\n",
+    "# Embed the image\n",
+    "image_embed = perceptor.encode_image(normalize(img)).to(device)\n",
+    "print(f'-- [image_embed.shape] --\\n{image_embed.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.26862954, 0.26130258, 0.27577711]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
