GPT-4 assisted comments added

--- a/aiart/art_01_Intro_GradientDescent.ipynb
+++ b/aiart/art_01_Intro_GradientDescent.ipynb
@@ -2385,7 +2385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Usin CLIP as a loss function\n",
+    "### Using CLIP as a loss function\n",
     "\n",
     "We're going to load in a CLIP model and use it to encode both an image and some text:"
    ]
@@ -2481,8 +2481,8 @@
    ],
    "source": [
     "# Embed some text\n",
-    "token_string = 'A watercolor painting of the sunset over a mountain range'\n",
-    "text_embed = perceptor.encode_text(clip.tokenize(token_string)).to(device)\n",
+    "prompt_string = 'A watercolor painting of the sunset over a mountain range'\n",
+    "text_embed = perceptor.encode_text(clip.tokenize(prompt_string)).to(device)\n",
     "text_embed.shape"
    ]
   },
@@ -2491,7 +2491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Encoding an image:\n",
+    "**Encoding an image:**\n",
     "\n",
     "The input image tensor has a shape of `torch.Size([1, 3, 224, 224])`, which  \n",
     "represents a batch of 1 image (B) with 3 color channels (C) and dimensions of  \n",
@@ -2533,11 +2533,11 @@
     "perform zero-shot classification tasks.\n",
     "\n",
     "Regarding the question of whether this works with different image sizes:  \n",
-    "The 'ViT-B/32' model expects input images of size 224x224 pixels.  \n",
-    "If you provide images with different dimensions, the model may not work as expected,  \n",
-    "and the performance could be affected. You can resize the input images to  \n",
-    "224x224 pixels using the `torchvision.transforms.Resize` function before passing  \n",
-    "them through the model."
+    "- The 'ViT-B/32' model expects input images of size 224x224 pixels.  \n",
+    "- If you provide images with different dimensions, the model may not work as  \n",
+    "expected, and the performance could be affected. \n",
+    "- You can resize the input images to 224x224 pixels using the  \n",
+    "`torchvision.transforms.Resize` function before passing them through the model."
    ]
   },
   {
@@ -2580,22 +2580,143 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have a representation of both the text and the image in the same  \n",
+    "`space`, we need some way to compare them. For this first test, let's re-use an  \n",
+    "idea from earlier and calculate a sort of `Root-Mean-Squared-Difference`:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.26862954, 0.26130258, 0.27577711]"
+       "tensor(0.4949)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "def clip_loss_basic(img, text_embed):\n",
+    "    img_embed = perceptor.encode_image(normalize(img)).to(device)\n",
+    "    # Root mean squared error\n",
+    "    loss = torch.mean((img_embed - text_embed)**2)**0.5\n",
+    "    return loss\n",
+    "\n",
+    "# Some measure of how closely our image matches the text propmt hopefully\n",
+    "clip_loss_basic(img, text_embed)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, compare our situation to the gradient descent example. We have some  \n",
+    "parameters to optimize (in this case, the raw pixel data of an image) and we  \n",
+    "have a way to measure loss (our clip_loss_basic function). Can we just use the  \n",
+    "same optimization loop as before? Let's try it and see!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The target text\n",
+    "prompt_string = 'A watercolor painting of the sunset over a mountain range'\n",
+    "text_embed = perceptor.encode_text(clip.tokenize(prompt_string)).to(device)\n",
+    "\n",
+    "# The 'ViT-B/32' model expects input images of size 224x224 pixels\n",
+    "model_w = model_h = 224 # \n",
+    "# the image we want to optimize\n",
+    "img = torch.rand(1, 3, model_w, model_h)\n",
+    "img.requires_grad = True\n",
+    "\n",
+    "# cache the initial image that is disconnected from the computation graph\n",
+    "# - .detach() => a new tensor but without any connection to the computation graph\n",
+    "#   useful when you want don't need to keep track of gradients or any information \n",
+    "#   related to backpropagation\n",
+    "img_start = img.detach().clone()\n",
+    "\n",
+    "# the optimizer\n",
+    "# @audit-ok : Explain if [img] == Gradient Descent (stochastic == batches > 1)\n",
+    "# ANSWER :\n",
+    "# While it's true that using a batch size of 1 is different from Stochastic \n",
+    "# Gradient Descent (which uses batches larger than 1) : \n",
+    "# - it is NOT the same as Gradient Descent. \n",
+    "# - When the batch size is 1, the optimization process is known as \n",
+    "#   **Online Gradient Descent** or **Incremental Gradient Descent**.\n",
+    "# - Online/Incremental GD can be more susceptible to noise and oscillations since \n",
+    "#   the gradient estimation is based on individual data points.\n",
+    "# - In summary, the main difference between Gradient Descent and \n",
+    "#   Online Gradient Descent is how they process the data to update the \n",
+    "#   model parameters. \n",
+    "#   Gradient Descent uses the entire dataset for each update, providing a more \n",
+    "#   accurate estimation of the gradient but can be computationally expensive. \n",
+    "#   Online Gradient Descent processes one data point at a time, allowing for \n",
+    "#   faster updates but potentially with more noise and oscillation in the \n",
+    "#   optimization process.\n",
+    "optimizer = torch.optim.SGD([img], lr=500)\n",
+    "# Keep track of the losses (RMSE values)\n",
+    "losses = []\n",
+    "\n",
+    "for i in tqdm(range(200)):\n",
+    "    # reset the gradients\n",
+    "    optimizer.zero_grad()\n",
+    "    # calculate our loss\n",
+    "    # store the loss\n",
+    "    # backpropagate the loss, and use it to update the parameters\n",
+    "\n",
+    "\n",
+    "\n",
+    "# visualize the results"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient Descent and Online Gradient Descent are optimization algorithms used to find the minimum of a function, often used in the context of machine learning and deep learning. The main difference between the two lies in how they process the data to update the model parameters.\n",
+    "\n",
+    "**Gradient Descent (Batch Gradient Descent):**\n",
+    "\n",
+    "Gradient Descent, also known as Batch Gradient Descent, is an optimization algorithm that calculates the gradient (the derivative) of the objective function with respect to the model parameters using the entire dataset. It updates the model parameters based on this calculated gradient. The process is repeated for a number of iterations or until convergence.\n",
+    "\n",
+    "The steps for Gradient Descent are:\n",
+    "\n",
+    "1. Compute the gradient of the objective function using the entire dataset.\n",
+    "2. Update the model parameters using the calculated gradient.\n",
+    "3. Repeat steps 1-2 for several iterations or until convergence.\n",
+    "\n",
+    "The main advantage of Gradient Descent is that it provides a stable and accurate estimation of the gradient. However, it can be computationally expensive for large datasets since it requires processing the entire dataset for each update.\n",
+    "\n",
+    "**Online Gradient Descent (Incremental Gradient Descent):**\n",
+    "\n",
+    "Online Gradient Descent, also called Incremental Gradient Descent or Stochastic Gradient Descent with a batch size of 1, is an optimization algorithm that updates the model parameters incrementally using one data point at a time. This means it calculates the gradient and updates the model parameters for each individual data point in the dataset.\n",
+    "\n",
+    "The steps for Online Gradient Descent are:\n",
+    "\n",
+    "1. For each data point in the dataset:\n",
+    "   a. Compute the gradient of the objective function using the current data point.\n",
+    "   b. Update the model parameters using the calculated gradient.\n",
+    "2. Repeat step 1 for several epochs (passes through the entire dataset) or until convergence.\n",
+    "\n",
+    "Online Gradient Descent can be faster than Gradient Descent for large datasets since it processes one data point at a time, allowing it to make more frequent updates. However, it can be more susceptible to noise and oscillations since the gradient estimation is based on individual data points.\n",
+    "\n",
+    "In summary, the main difference between Gradient Descent and Online Gradient Descent is how they process the data to update the model parameters. Gradient Descent uses the entire dataset for each update, providing a more accurate estimation of the gradient but can be computationally expensive. Online Gradient Descent processes one data point at a time, allowing for faster updates but potentially with more noise and oscillation in the optimization process."
+   ]
   }
  ],
  "metadata": {
