--- a/aiart/art_01_Intro_GradientDescent.ipynb
+++ b/aiart/art_01_Intro_GradientDescent.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages/IPython/core/display.py:419: UserWarning: Consider using IPython.display.IFrame instead\n",
-      "  warnings.warn(\"Consider using IPython.display.IFrame instead\")\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/p814BapRq2U\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+       "\n",
+       "        <iframe\n",
+       "            width=\"560\"\n",
+       "            height=\"315\"\n",
+       "            src=\"https://www.youtube.com/embed/p814BapRq2U\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "<IPython.lib.display.IFrame at 0x2813a79d0>"
       ]
      },
      "metadata": {},
@@ -29,8 +30,12 @@
    "source": [
     "import IPython.display as ipd\n",
     "\n",
-    "html = ipd.display(ipd.HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/p814BapRq2U\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>'))\n",
-    "html"
+    "url = \"https://www.youtube.com/embed/p814BapRq2U\"\n",
+    "width = 560\n",
+    "height = 315\n",
+    "\n",
+    "iframe = ipd.IFrame(url, width=width, height=height)\n",
+    "ipd.display(iframe)"
    ]
   },
   {
