content and style loss WIP

--- a/aiart/art_02_LearningRepresentations.ipynb
+++ b/aiart/art_02_LearningRepresentations.ipynb
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1649,8 @@
     "\n",
     "                #check if we got all the desired layers\n",
     "                if i == self.layerIndices[-1]:\n",
-    "                    break # early exit if this is the last desired layer\n",
+    "                    return outputs\n",
+    "                    # break # early exit if this is the last desired layer\n",
     "        return outputs\n"
    ]
   },
@@ -1732,22 +1733,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PIL Image to Torch Tensor `function()`"
+    "**PIL Image to Torch Tensor `function()`**\n",
+    "\n",
+    "- with **Transform Pipeline**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pil_to_torch(img):\n",
-    "    'convenience function to convert PIL Image to Torch Tensor'\n",
-    "    # convert image to numpy array\n",
-    "    # normalize to [0,1] range for image data by dividing by 255\n",
-    "    # permute channels from (H,W,C) to (C,H,W) for Pytorch CNNs\n",
+    "from torchvision.transforms import Compose, Resize, ToTensor\n",
+    "from torch import Tensor\n",
+    "\n",
+    "# def pil_to_torch(img: Image.Image) -> torch.Tensor:\n",
+    "def pil_to_torch(img : Image.Image, x=128, y=128) -> Tensor:\n",
+    "    \"\"\" \n",
+    "    Convenience function to convert PIL Image to Torch Tensor'\n",
+    "    - Also ensure that all `images are the same size` before computing `features`\n",
+    "\n",
+    "    Returns :\n",
+    "        torch.Tensor : the resulting Torch Tensor with an added batch dimension\n",
+    "\n",
+    "    Args :\n",
+    "        img : the image input\n",
+    "        x : the width of the image default=128\n",
+    "        y : the height of the image default=128\n",
+    "    \"\"\"\n",
+    "    # Define the tranform size\n",
+    "    # - Else we will get a `Runtime Error` like :\n",
+    "    #   `RuntimeError: Given groups=1, weight of size [64, 3, 3, 3], expected \n",
+    "    #    input[1, 1, 128, 128] to have 3 channels, but got 1 channels instead`\n",
+    "    image_xform_size = (x, y)\n",
+    "    # Define the transform pipeline\n",
+    "    transform = Compose([\n",
+    "        Resize(image_xform_size),\n",
+    "        ToTensor()\n",
+    "    ])\n",
+    "    # Apply the transform and explcitly specify the output type\n",
+    "    img_tensor : Tensor = transform(img)\n",
+    "\n",
     "    # unsqueeze to add an \"extra\" batch dimension\n",
-    "    return torch.tensor(np.array(img)/255.0, dtype=torch.float).permute(2,0,1).unsqueeze(0)"
+    "    return img_tensor.unsqueeze(0)"
    ]
   },
   {
@@ -1761,27 +1789,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[torch.Size([1, 256, 187, 251]), torch.Size([1, 512, 93, 125])]"
+       "[torch.Size([1, 256, 32, 32]), torch.Size([1, 512, 16, 16])]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "content_img_tensor = pil_to_torch(content_image)\n",
-    "contentExtractor = VGGFeatureExtractor(vgg, [15,19]) # @audit 🛑 : Explain why 15,19?\n",
+    "# @audit-ok 🔎 : Explain why 15,19?\n",
+    "contentExtractor = VGGFeatureExtractor(vgg, [15,19])\n",
     "target_content_features = contentExtractor(content_img_tensor)\n",
     "\n",
     "# View the shapes of the extracted features (one for each tensor layer)\n",
     "[t.shape for t in target_content_features]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And likewise from some early layers to use in the style loss:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[torch.Size([1, 128, 64, 64]),\n",
+       " torch.Size([1, 128, 64, 64]),\n",
+       " torch.Size([1, 256, 32, 32]),\n",
+       " torch.Size([1, 256, 32, 32]),\n",
+       " torch.Size([1, 512, 16, 16])]"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "style_img_tensor = pil_to_torch(style_image)\n",
+    "# @audit-ok 🔎 : Explain why 5,7,10,12,17?\n",
+    "styleExtractor = VGGFeatureExtractor(vgg, [5, 7 , 10, 12, 17])\n",
+    "target_style_features = styleExtractor(style_img_tensor)\n",
+    "[t.shape for t in target_style_features]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We feed in an image and get back these tensors recording the activations of  \n",
+    "various neurons in specific layers of the network - the 'internal representations'  \n",
+    "which we'll use in our loss functions."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- [3.2] -- DEFINING THE LOSS FUNCTIONS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our `content loss` we'll keep things simple, with a measure of how large the  \n",
+    "differences between the two sets of features are : \n",
+    "- `l1 loss` (think of it as mean absolute error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(20.5106)"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def content_loss(img, target_content_features):\n",
+    "    \"\"\" \n",
+    "    Returns: \n",
+    "        Tensor: the average content loss between the input image and the target content features\n",
+    "    Args:\n",
+    "        img (Tensor): the input image\n",
+    "        target_content_features (list of Tensor) : the target content features\n",
+    "    \"\"\"\n",
+    "    img_content_features = contentExtractor(img) # @note 🍝 function call\n",
+    "    loss = 0\n",
+    "    # The `zip` function combines two lists element-wise into pairs and supports\n",
+    "    # - iterates pairs of features from input image and target content features\n",
+    "    for img_features, target_features in zip(img_content_features, target_content_features):\n",
+    "        # calculates the MSE loss between the :\n",
+    "        # - input image's features and \n",
+    "        # - the target features \n",
+    "        # which is a measure of their difference\n",
+    "        loss += F.mse_loss(img_features, target_features)\n",
+    "    return loss/len(img_content_features)\n",
+    "\n",
+    "# @audit-ok 🔎 : Explain why 1,3,128,128?\n",
+    "img = torch.rand(1, 3, 128, 128)\n",
+    "content_loss(img, target_content_features)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `style loss` is a little more `tricky`. \n",
+    "\n",
+    "We want to measure the occurence of similar features, but we don't care so much  \n",
+    "where they occur in the image. Using L1 loss as above would mean it just tried  \n",
+    "to copy the style image (layout and all). \n",
+    "\n",
+    "To get around this, we create something called a gram matrix for each set of  \n",
+    "features, and `compare these gram matrices` instead of comparing the features  \n",
+    "directly.  \n",
+    "\n",
+    "This is one of those things where most tutorials/explanations online don't give  \n",
+    "any explanation for why we do this specifically, and I don't know the theory  \n",
+    "myself so we're going going to roll with this `¯_(ツ)_/¯`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NB: These two losses are quite different size-wise.  \n",
+    "\n",
+    "This can sometimes mean that one will 'overpower' the other.  \n",
+    "We'll partly address this by adding some parameters to scale both losses and  \n",
+    "adjust how much each one contributes to the final loss value.  \n",
+    "\n",
+    "In this case you'll also notice that while the style_loss starts out high it  \n",
+    "rapidly falls as small changes to the image being optimised take effect."
    ]
   },
   {
