hacked to blit an asteroid

--- a/pygames/asteroids/asteroids.ipynb
+++ b/pygames/asteroids/asteroids.ipynb
@@ -35,12 +35,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- [INIT] -- "
+    "#### -- [INIT] -- \n",
+    "***"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **SETUP**\n",
+    "- `on_awake   ` (init_game => screen, refresh, load assets ... etc)\n",
+    "- `on_update  ` (game_loop => handle events, input, draws ..etc )\n",
+    "- `on_exit    ` (close_app => clear memory and shut down cpu/sys ... etc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +96,7 @@
     "    sys.exit()\n",
     "\n",
     "# Game Loop\n",
-    "def on_update(screen : pygame.Surface, clock : pygame.time.Clock, FPS=30):\n",
+    "def on_update(screen : pygame.Surface, clock : pygame.time.Clock, asteroids, FPS=30):\n",
     "    ''' \n",
     "    Game loop\n",
     "    '''\n",
@@ -96,6 +108,9 @@
     "            for event in pygame.event.get():\n",
     "                if event.type == pygame.QUIT:\n",
     "                    on_exit()\n",
+    "                if event.type == pygame.KEYUP:\n",
+    "                    if event.key == pygame.K_ESCAPE:\n",
+    "                        on_exit()\n",
     "            # Update game state\n",
     "            # Draw game objects\n",
     "            # Update the display\n",
@@ -103,9 +118,61 @@
     "            g = random.randint(0, 255)\n",
     "            b = random.randint(0, 255)\n",
     "            screen.fill((r, g, b))\n",
+    "            for asteroid in asteroids:\n",
+    "                asteroid.draw(screen)\n",
     "            pygame.display.flip()\n",
+    "            \n",
     "        except SystemExit:\n",
     "            break"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **CLASSES**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Asteroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Asteroid:\n",
+    "    def __init__(self, x, y, image):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.image = image\n",
+    "        self.asteroids = []\n",
+    "\n",
+    "    def update(self):\n",
+    "        pass\n",
+    "\n",
+    "    def draw(self, screen):\n",
+    "        # Draw the asteroid\n",
+    "        screen.blit(self.image, (self.x, self.y))\n",
+    "\n",
+    "def spawn_asteroids(self):\n",
+    "    x = random.randint(0, SCREEN_WIDTH)\n",
+    "    y = random.randint(0, SCREEN_HEIGHT)\n",
+    "    img = pygame.image.load('asteroid.png')\n",
+    "    asteroid = Asteroid(x, y, img)\n",
+    "    self.asteroids.append(asteroid)\n",
+    "\n",
+    "def update_asteroids(self, screen):\n",
+    "    for asteroid in self.asteroids:\n",
+    "        # asteroid.update()\n",
+    "        asteroid.draw(screen)\n"
    ]
   },
   {
@@ -118,11 +185,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "screen, clock = on_awake()"
+    "screen, clock = on_awake()\n",
+    "asteroids = []\n",
+    "# x = random.randint(0, SCREEN_WIDTH)\n",
+    "# y = random.randint(0, SCREEN_HEIGHT)\n",
+    "x = 0\n",
+    "y = 0\n",
+    "img = pygame.image.load('asteroid.png')\n",
+    "asteroid = Asteroid(x, y, img)\n",
+    "asteroids.append(asteroid)"
    ]
   },
   {
@@ -135,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +218,7 @@
     "# object to the function is MINIMAL, as it's just passing a REFERENCE to the \n",
     "# object.\n",
     "FPS = 30\n",
-    "on_update(screen, clock, FPS)"
+    "on_update(screen, clock, asteroids, FPS)"
    ]
   },
   {
