hack asteroid rotate at 60 fps

--- a/pygames/asteroids/asteroids.ipynb
+++ b/pygames/asteroids/asteroids.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +101,9 @@
     "    Game loop\n",
     "    '''\n",
     "    # Set the frame rate\n",
-    "    clock.tick(FPS)\n",
     "    while True:\n",
     "        try:\n",
+    "            clock.tick(FPS)\n",
     "            # Event Handling\n",
     "            for event in pygame.event.get():\n",
     "                if event.type == pygame.QUIT:\n",
@@ -119,6 +119,7 @@
     "            b = random.randint(0, 255)\n",
     "            screen.fill((r, g, b))\n",
     "            for asteroid in asteroids:\n",
+    "                asteroid.update()\n",
     "                asteroid.draw(screen)\n",
     "            pygame.display.flip()\n",
     "            \n",
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,26 +154,24 @@
     "        self.x = x\n",
     "        self.y = y\n",
     "        self.image = image\n",
-    "        self.asteroids = []\n",
+    "        self.vx = random.randint(-2, 2)\n",
+    "        self.vy = random.randint(-2, 2)\n",
+    "        self.rotation = random.randint(0, 359)\n",
     "\n",
     "    def update(self):\n",
-    "        pass\n",
+    "        # Update the position based on velocity\n",
+    "        # self.x += self.vx\n",
+    "        # self.y += self.vy\n",
+    "        # Update the rotation\n",
+    "        self.rotation = (self.rotation + 1) % 360\n",
     "\n",
     "    def draw(self, screen):\n",
+    "        # Rotate the image\n",
+    "        rotated_image = pygame.transform.rotate(self.image, self.rotation)\n",
+    "        # Calculate the new image's rect to keep it centered\n",
+    "        rect = self.image.get_rect(center=self.image.get_rect(topleft=(self.x, self.y)).center)\n",
     "        # Draw the asteroid\n",
-    "        screen.blit(self.image, (self.x, self.y))\n",
-    "\n",
-    "def spawn_asteroids(self):\n",
-    "    x = random.randint(0, SCREEN_WIDTH)\n",
-    "    y = random.randint(0, SCREEN_HEIGHT)\n",
-    "    img = pygame.image.load('asteroid.png')\n",
-    "    asteroid = Asteroid(x, y, img)\n",
-    "    self.asteroids.append(asteroid)\n",
-    "\n",
-    "def update_asteroids(self, screen):\n",
-    "    for asteroid in self.asteroids:\n",
-    "        # asteroid.update()\n",
-    "        asteroid.draw(screen)\n"
+    "        screen.blit(rotated_image, rect.topleft)"
    ]
   },
   {
@@ -185,17 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "screen, clock = on_awake()\n",
     "asteroids = []\n",
-    "# x = random.randint(0, SCREEN_WIDTH)\n",
-    "# y = random.randint(0, SCREEN_HEIGHT)\n",
-    "x = 0\n",
-    "y = 0\n",
+    "x = 160\n",
+    "y = 120\n",
     "img = pygame.image.load('asteroid.png')\n",
+    "img = pygame.transform.scale(img, (32, 32))\n",
     "asteroid = Asteroid(x, y, img)\n",
     "asteroids.append(asteroid)"
    ]
@@ -210,14 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "# @audit-ok 💨 : The memory and performance overhead of passing the `screen` \n",
     "# object to the function is MINIMAL, as it's just passing a REFERENCE to the \n",
     "# object.\n",
-    "FPS = 30\n",
+    "FPS = 60\n",
     "on_update(screen, clock, asteroids, FPS)"
    ]
   },
