--- a/pygames/asteroids/asteroids.ipynb
+++ b/pygames/asteroids/asteroids.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **SETUP**\n",
+    "##### **SETUP** : Import Libraries and Init Globals\n",
     "- `on_awake   ` (init_game => screen, refresh, load assets ... etc)\n",
     "- `on_update  ` (game_loop => handle events, input, draws ..etc )\n",
     "- `on_exit    ` (close_app => clear memory and shut down cpu/sys ... etc)"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,32 +61,34 @@
     "import pygame\n",
     "import sys\n",
     "\n",
+    "# Define the screen size\n",
     "SCREEN_WIDTH, SCREEN_HEIGHT = 320, 240\n",
+    "FPS = 5\n",
+    "BACKGROUND_COLOR = (0, 0, 0)\n",
     "\n",
     "def on_awake():\n",
     "    ''' \n",
-    "    Initialize pygame and return:\n",
-    "    - screen (pygame.Surface)\n",
-    "    - clock (pygame.time.Clock)\n",
+    "    Initialize pygame\n",
+    "    - SYS_SCREEN\n",
+    "    - SYS_CLOCK\n",
     "    '''\n",
+    "    global SYS_SCREEN\n",
+    "    global SYS_CLOCK\n",
     "    # Initialize pygame\n",
     "    pygame.init()\n",
-    "\n",
-    "    # Define the screen size\n",
-    "    # Create the screen\n",
-    "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
-    "\n",
+    "    # Initialize the screen\n",
+    "    SYS_SCREEN = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
+    "    # Initialize the clock\n",
     "    # @audit-ok 💨 : Cap the frame rate else loop will run at system allows and \n",
-    "    # will lead to :\n",
+    "    # # will lead to :\n",
     "    # - high CPU usage\n",
     "    # - inconsistent performance across different devices. \n",
-    "    clock = pygame.time.Clock()\n",
+    "    SYS_CLOCK = pygame.time.Clock()\n",
     "\n",
     "    # Set the title and icon (optional)\n",
     "    pygame.display.set_caption('Asteroids_TON_Edition')\n",
     "    icon = pygame.image.load('asteroid.png')\n",
     "    pygame.display.set_icon(icon)\n",
-    "    return screen, clock\n",
     "\n",
     "def on_exit():\n",
     "    ''' \n",
@@ -96,14 +98,14 @@
     "    sys.exit()\n",
     "\n",
     "# Game Loop\n",
-    "def on_update(screen : pygame.Surface, clock : pygame.time.Clock, asteroids, FPS=30):\n",
+    "def on_update(asteroids):\n",
     "    ''' \n",
     "    Game loop\n",
     "    '''\n",
-    "    # Set the frame rate\n",
     "    while True:\n",
     "        try:\n",
-    "            clock.tick(FPS)\n",
+    "            # Set the frame rate\n",
+    "            SYS_CLOCK.tick(FPS)\n",
     "            # Event Handling\n",
     "            for event in pygame.event.get():\n",
     "                if event.type == pygame.QUIT:\n",
@@ -114,13 +116,10 @@
     "            # Update game state\n",
     "            # Draw game objects\n",
     "            # Update the display\n",
-    "            r = random.randint(0, 255)\n",
-    "            g = random.randint(0, 255)\n",
-    "            b = random.randint(0, 255)\n",
-    "            screen.fill((r, g, b))\n",
+    "            SYS_SCREEN.fill(BACKGROUND_COLOR)\n",
     "            for asteroid in asteroids:\n",
     "                asteroid.update()\n",
-    "                asteroid.draw(screen)\n",
+    "                asteroid.draw()\n",
     "            pygame.display.flip()\n",
     "            \n",
     "        except SystemExit:\n",
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,18 +159,18 @@
     "\n",
     "    def update(self):\n",
     "        # Update the position based on velocity\n",
-    "        # self.x += self.vx\n",
-    "        # self.y += self.vy\n",
+    "        self.x = (self.x + self.vx) % SCREEN_WIDTH\n",
+    "        self.y = (self.y + self.vy) % SCREEN_HEIGHT\n",
     "        # Update the rotation\n",
     "        self.rotation = (self.rotation + 1) % 360\n",
     "\n",
-    "    def draw(self, screen):\n",
+    "    def draw(self):\n",
     "        # Rotate the image\n",
     "        rotated_image = pygame.transform.rotate(self.image, self.rotation)\n",
     "        # Calculate the new image's rect to keep it centered\n",
     "        rect = self.image.get_rect(center=self.image.get_rect(topleft=(self.x, self.y)).center)\n",
     "        # Draw the asteroid\n",
-    "        screen.blit(rotated_image, rect.topleft)"
+    "        SYS_SCREEN.blit(rotated_image, rect.topleft)"
    ]
   },
   {
@@ -184,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
-    "screen, clock = on_awake()\n",
+    "screen = on_awake()\n",
     "asteroids = []\n",
     "x = 160\n",
     "y = 120\n",
@@ -208,15 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
     "# @audit-ok 💨 : The memory and performance overhead of passing the `screen` \n",
     "# object to the function is MINIMAL, as it's just passing a REFERENCE to the \n",
     "# object.\n",
-    "FPS = 60\n",
-    "on_update(screen, clock, asteroids, FPS)"
+    "on_update(asteroids)"
    ]
   },
   {
