--- a/pygames/asteroids/asteroids.ipynb
+++ b/pygames/asteroids/asteroids.ipynb
@@ -52,12 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "# `numpy` library random which is FASTER for generating large numbers of random values\n",
     "from numpy import random\n",
+    "from typing import NamedTuple\n",
     "import pygame\n",
     "import sys\n",
     "\n",
@@ -66,29 +76,66 @@
     "FPS = 5\n",
     "BACKGROUND_COLOR = (0, 0, 0)\n",
     "\n",
+    "class SystemContext (NamedTuple):\n",
+    "    screen :pygame.Surface\n",
+    "    clock  :pygame.time.Clock\n",
+    "\n",
+    "class BaseEntity:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "        \n",
+    "    def update(self):\n",
+    "        pass\n",
+    "\n",
+    "class DrawEntity(BaseEntity):\n",
+    "    def __init__(self, x,y, image):\n",
+    "        super().__init__()\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.image = image\n",
+    "\n",
+    "    def draw(self, screen : pygame.Surface):\n",
+    "        screen.blit(self.image, (self.x, self.y))\n",
+    "\n",
+    "class GameEntity(DrawEntity):\n",
+    "    def __init__(self, x,y, image, scale = 1, rotation =0, speed = 0):\n",
+    "        super().__init__(x,y, image)\n",
+    "        self.vx = 0\n",
+    "        self.vy = 0\n",
+    "        self.rotation = rotation\n",
+    "        self.scale = scale\n",
+    "        self.speed = speed\n",
+    "\n",
+    "    def update(self):\n",
+    "        super().update()\n",
+    "        # Update the position based on velocity\n",
+    "        self.x = (self.x + self.vx) % SCREEN_WIDTH\n",
+    "        self.y = (self.y + self.vy) % SCREEN_HEIGHT\n",
+    "        # Update the rotation\n",
+    "        self.rotation = (self.rotation + 1) % 360\n",
+    "\n",
     "def on_awake():\n",
     "    ''' \n",
     "    Initialize pygame\n",
     "    - SYS_SCREEN\n",
     "    - SYS_CLOCK\n",
     "    '''\n",
-    "    global SYS_SCREEN\n",
-    "    global SYS_CLOCK\n",
     "    # Initialize pygame\n",
     "    pygame.init()\n",
     "    # Initialize the screen\n",
-    "    SYS_SCREEN = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
+    "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
     "    # Initialize the clock\n",
     "    # @audit-ok 💨 : Cap the frame rate else loop will run at system allows and \n",
     "    # # will lead to :\n",
     "    # - high CPU usage\n",
     "    # - inconsistent performance across different devices. \n",
-    "    SYS_CLOCK = pygame.time.Clock()\n",
+    "    clock = pygame.time.Clock()\n",
     "\n",
     "    # Set the title and icon (optional)\n",
     "    pygame.display.set_caption('Asteroids_TON_Edition')\n",
     "    icon = pygame.image.load('asteroid.png')\n",
     "    pygame.display.set_icon(icon)\n",
+    "    return SystemContext(screen, clock)\n",
     "\n",
     "def on_exit():\n",
     "    ''' \n",
@@ -98,14 +145,14 @@
     "    sys.exit()\n",
     "\n",
     "# Game Loop\n",
-    "def on_update(asteroids):\n",
+    "def on_update(context : SystemContext, asteroids : list):\n",
     "    ''' \n",
     "    Game loop\n",
     "    '''\n",
     "    while True:\n",
     "        try:\n",
     "            # Set the frame rate\n",
-    "            SYS_CLOCK.tick(FPS)\n",
+    "            context.clock.tick(FPS)\n",
     "            # Event Handling\n",
     "            for event in pygame.event.get():\n",
     "                if event.type == pygame.QUIT:\n",
@@ -116,10 +163,10 @@
     "            # Update game state\n",
     "            # Draw game objects\n",
     "            # Update the display\n",
-    "            SYS_SCREEN.fill(BACKGROUND_COLOR)\n",
+    "            context.screen.fill(BACKGROUND_COLOR)\n",
     "            for asteroid in asteroids:\n",
     "                asteroid.update()\n",
-    "                asteroid.draw()\n",
+    "                asteroid.draw(context.screen)\n",
     "            pygame.display.flip()\n",
     "            \n",
     "        except SystemExit:\n",
@@ -144,33 +191,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Asteroid:\n",
+    "class Asteroid(GameEntity):\n",
     "    def __init__(self, x, y, image):\n",
-    "        self.x = x\n",
-    "        self.y = y\n",
-    "        self.image = image\n",
+    "        super().__init__(x, y, image)\n",
     "        self.vx = random.randint(-2, 2)\n",
     "        self.vy = random.randint(-2, 2)\n",
     "        self.rotation = random.randint(0, 359)\n",
     "\n",
-    "    def update(self):\n",
-    "        # Update the position based on velocity\n",
-    "        self.x = (self.x + self.vx) % SCREEN_WIDTH\n",
-    "        self.y = (self.y + self.vy) % SCREEN_HEIGHT\n",
-    "        # Update the rotation\n",
-    "        self.rotation = (self.rotation + 1) % 360\n",
-    "\n",
-    "    def draw(self):\n",
+    "    def draw(self, screen : pygame.Surface):\n",
     "        # Rotate the image\n",
     "        rotated_image = pygame.transform.rotate(self.image, self.rotation)\n",
     "        # Calculate the new image's rect to keep it centered\n",
     "        rect = self.image.get_rect(center=self.image.get_rect(topleft=(self.x, self.y)).center)\n",
     "        # Draw the asteroid\n",
-    "        SYS_SCREEN.blit(rotated_image, rect.topleft)"
+    "        screen.blit(rotated_image, rect.topleft)"
    ]
   },
   {
@@ -183,18 +221,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "screen = on_awake()\n",
+    "context = on_awake()\n",
     "asteroids = []\n",
     "x = 160\n",
     "y = 120\n",
     "img = pygame.image.load('asteroid.png')\n",
     "img = pygame.transform.scale(img, (32, 32))\n",
     "asteroid = Asteroid(x, y, img)\n",
-    "asteroids.append(asteroid)"
+    "asteroids.append(asteroid)\n",
+    "# @audit-ok 💨 : The memory and performance overhead of passing the `screen` \n",
+    "# object to the function is MINIMAL, as it's just passing a REFERENCE to the \n",
+    "# object.\n",
+    "on_update(context, asteroids)"
    ]
   },
   {
@@ -203,18 +245,6 @@
    "metadata": {},
    "source": [
     "#### -- [ON_UPDATE] --"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# @audit-ok 💨 : The memory and performance overhead of passing the `screen` \n",
-    "# object to the function is MINIMAL, as it's just passing a REFERENCE to the \n",
-    "# object.\n",
-    "on_update(asteroids)"
    ]
   },
   {
@@ -278,6 +308,49 @@
     "handling and not using it in this case is minimal. The primary reason to include  \n",
     "exception handling in this scenario is to improve the user experience by  \n",
     "preventing the traceback message from being displayed when the game is terminated."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explain the trade off between declaring variable as global vs passing as reference with respect to memory and performance\n",
+    "***\n",
+    "\n",
+    "When deciding whether to use a global variable or pass a variable by reference, there are trade-offs to consider regarding memory, performance, and general programming practices.\n",
+    "\n",
+    "**Global variables:**\n",
+    "\n",
+    "Pros:\n",
+    "\n",
+    "- Easy to access from any part of the code without needing to pass them as arguments.\n",
+    "- Can help reduce the number of arguments a function needs, making the function signature simpler.\n",
+    "\n",
+    "Cons:\n",
+    "\n",
+    "- Can lead to unexpected behavior and bugs, as any part of the code can modify the global variable.\n",
+    "- Makes code harder to understand and maintain, as it's not clear which functions rely on or modify the global variable.\n",
+    "- Less modular and harder to reuse functions in other programs, since they depend on the global variable.\n",
+    "\n",
+    "**Passing by reference:**\n",
+    "\n",
+    "Pros:\n",
+    "\n",
+    "- Makes code more modular, as functions explicitly state in their signature what variables they need.\n",
+    "- Easier to understand, maintain, and reuse, as it's clear which functions use or modify the variable.\n",
+    "- Better encapsulation, as each function deals only with the data it needs.\n",
+    "\n",
+    "Cons:\n",
+    "\n",
+    "- Can increase the number of function arguments, making the function signature more complex.\n",
+    "- Slightly more complex to work with, as you need to pass the variable explicitly.\n",
+    "\n",
+    "Regarding memory and performance, there is generally not a significant difference between using global variables and passing variables by reference. In both cases, the memory used for the variable is allocated once and accessed by reference, so there is no additional memory overhead. The performance depends on the specific use case and how well the code is optimized.\n",
+    "\n",
+    "However, it is worth mentioning that using global variables can lead to less maintainable code, which may indirectly affect performance over time, as it becomes more difficult to optimize and debug the code.\n",
+    "\n",
+    "In general, it's recommended to use local variables and pass them by reference whenever possible to promote modularity, maintainability, and readability. Only use global variables when you have a good reason to do so, such as when dealing with truly global state or constants."
    ]
   }
  ],
