--- a/pygames/asteroids/asteroids.ipynb
+++ b/pygames/asteroids/asteroids.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **SETUP** : Import Libraries and Init Globals\n",
+    "##### **Import Libraries and Init Globals**\n",
     "- `on_awake   ` (init_game => screen, refresh, load assets ... etc)\n",
     "- `on_update  ` (game_loop => handle events, input, draws ..etc )\n",
     "- `on_exit    ` (close_app => clear memory and shut down cpu/sys ... etc)"
@@ -52,18 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# `numpy` library random which is FASTER for generating large numbers of random values\n",
     "from numpy import random\n",
@@ -83,7 +74,6 @@
     "class BaseEntity:\n",
     "    def __init__(self):\n",
     "        pass\n",
-    "        \n",
     "    def update(self):\n",
     "        pass\n",
     "\n",
@@ -114,7 +104,7 @@
     "        # Update the rotation\n",
     "        self.rotation = (self.rotation + 1) % 360\n",
     "\n",
-    "def on_awake():\n",
+    "def on_awake() -> SystemContext:\n",
     "    ''' \n",
     "    Initialize pygame\n",
     "    - SYS_SCREEN\n",
@@ -137,7 +127,7 @@
     "    pygame.display.set_icon(icon)\n",
     "    return SystemContext(screen, clock)\n",
     "\n",
-    "def on_exit():\n",
+    "def on_exit() -> None :\n",
     "    ''' \n",
     "    Handle exit event\n",
     "    '''\n",
@@ -145,7 +135,7 @@
     "    sys.exit()\n",
     "\n",
     "# Game Loop\n",
-    "def on_update(context : SystemContext, asteroids : list):\n",
+    "def game_loop(context : SystemContext, assets : list) -> None:\n",
     "    ''' \n",
     "    Game loop\n",
     "    '''\n",
@@ -164,13 +154,13 @@
     "            # Draw game objects\n",
     "            # Update the display\n",
     "            context.screen.fill(BACKGROUND_COLOR)\n",
-    "            for asteroid in asteroids:\n",
-    "                asteroid.update()\n",
-    "                asteroid.draw(context.screen)\n",
+    "            for asset in assets:\n",
+    "                asset.update()\n",
+    "                asset.draw(context.screen)\n",
     "            pygame.display.flip()\n",
     "            \n",
     "        except SystemExit:\n",
-    "            break"
+    "            break\n"
    ]
   },
   {
@@ -178,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **CLASSES**"
+    "#### -- [ENTITIES] --"
    ]
   },
   {
@@ -186,12 +176,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Asteroids"
+    "##### **Asteroid**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,27 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- [ON_AWAKE] --"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "context = on_awake()\n",
-    "asteroids = []\n",
-    "x = 160\n",
-    "y = 120\n",
-    "img = pygame.image.load('asteroid.png')\n",
-    "img = pygame.transform.scale(img, (32, 32))\n",
-    "asteroid = Asteroid(x, y, img)\n",
-    "asteroids.append(asteroid)\n",
-    "# @audit-ok 💨 : The memory and performance overhead of passing the `screen` \n",
-    "# object to the function is MINIMAL, as it's just passing a REFERENCE to the \n",
-    "# object.\n",
-    "on_update(context, asteroids)"
+    "##### **Asset Package**"
    ]
   },
   {
@@ -244,7 +214,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- [ON_UPDATE] --"
+    "#### -- [GAME_LOOP] --\n",
+    "\n",
+    "- instantiate entities\n",
+    "- update frames in main ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def asset_instantiate() -> list:\n",
+    "    x = 160\n",
+    "    y = 120\n",
+    "    img = pygame.image.load('asteroid.png')\n",
+    "    img = pygame.transform.scale(img, (32, 32))\n",
+    "    assets = []\n",
+    "    assets.append(Asteroid(x,y, img))\n",
+    "    return assets\n",
+    "\n",
+    "def main() -> None:\n",
+    "    assets = asset_instantiate()\n",
+    "    context = on_awake()\n",
+    "    game_loop(context, assets)\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    main()"
    ]
   },
   {
